--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.11"
 readme = "README.md"
 dependencies = [
   "PyYAML==6.0.3",
+  "python-docx==1.2.0",
   "google-api-python-client==2.135.0",
   "google-auth==2.34.0",
   "google-auth-httplib2==0.2.0",
