--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -28,3 +28,5 @@ jobs:
           languages: ${{ matrix.language }}
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
+        with:
+          upload: false
